--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://RKSouth.github.io/StaffDirectory",
+  "homepage": "https://RKSouth.github.io/StaffDirectory/",
   "name": "staffdir",
   "version": "0.1.0",
   "private": true,
